--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://pavelpereverzev1.github.io/booklovers-team/",
+  "homepage": "https://GoitStudentsWorks.github.io/js_83_PavelPereverzev1/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /booklovers-team/"
+    "build": "parcel build src/*.html --public-url /js_83_PavelPereverzev1/"
   },
   "repository": {
     "type": "git",
